--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SeedWeb - Demo 3 Capas</title>
+    <title>Virtualización en Proxmox</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="config.js"></script> </head>
 <body class="bg-slate-100 text-slate-800 font-sans">
@@ -11,7 +11,6 @@
     <nav class="bg-blue-600 text-white p-4 shadow-lg">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-xl font-bold">Interfaz de registro</h1>
-            <span class="text-sm bg-blue-800 px-3 py-1 rounded-full">Capa 1: Presentación</span>
         </div>
     </nav>
 
