--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,11 +26,11 @@
                     <input type="text" id="nombre" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Ej. Juan Pérez" required>
                 </div>
                 <div>
-                    <label class="block text-sm font-medium text-gray-700">Carrera / Facultad</label>
+                    <label class="block text-sm font-medium text-gray-700">Carrera</label>
                     <input type="text" id="carrera" class="mt-1 block w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500" placeholder="Ej. Sistemas" required>
                 </div>
                 <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700 transition duration-300 font-semibold shadow-md">
-                    Enviar a Capa 2 🚀
+                    Enviar
                 </button>
             </form>
             <div id="statusMessage" class="mt-4 text-center text-sm font-medium hidden"></div>
